--- a/briar-android/src/main/res/values-ru/strings.xml
+++ b/briar-android/src/main/res/values-ru/strings.xml
@@ -39,7 +39,7 @@
   <string name="startup_failed_service_error">Briar не смог запустить требуемый подключаемый модуль. Переустановка Briar обычно решает эту проблему. Однако обратите внимание, что после этого вы потеряете свою учетную запись и все связанные с ней данные, поскольку Briar не использует центральных серверов для хранения данных.</string>
   <plurals name="expiry_warning">
     <item quantity="one">Это бета-версия Briar. Срок действия вашей учетной записи истечет через %d день и не может быть продлен.</item>
-    <item quantity="few">Это бета-версия Briar. Срок действия вашей учетной записи истечет через %d дней и не может быть продлен.</item>
+    <item quantity="few">Это бета-версия Briar. Срок действия вашей учетной записи истечет через %d дня и не может быть продлен.</item>
     <item quantity="many">Это бета-версия Briar. Срок действия вашей учетной записи истечет через %d дней и не может быть продлен.</item>
     <item quantity="other">Это бета-версия Briar. Срок действия вашей учетной записи истечет через %d дней и не может быть продлен.</item>
   </plurals>
@@ -80,13 +80,13 @@
   </plurals>
   <plurals name="forum_post_notification_text">
     <item quantity="one">Новый пост на форуме</item>
-    <item quantity="few">%d новых постов на форуме.</item>
-    <item quantity="many">%d новых постов на форуме.</item>
+    <item quantity="few">%d новых поста на форуме.</item>
+    <item quantity="many">%d новых постов на форуме.</item>
     <item quantity="other">%d новых постов на форуме.</item>
   </plurals>
   <plurals name="blog_post_notification_text">
     <item quantity="one">Новый пост в блоге.</item>
-    <item quantity="few">%d новых постов в блоге.</item>
+    <item quantity="few">%d новых поста в блоге.</item>
     <item quantity="many">%d новых постов в блоге.</item>
     <item quantity="other">%d новых постов в блоге.</item>
   </plurals>
@@ -163,7 +163,7 @@
   <string name="introduction_response_declined_received_by_introducee">%1$s говорит, что %2$s отказался от знакомства.</string>
   <plurals name="introduction_notification_text">
     <item quantity="one">Новый контакт добавлен.</item>
-    <item quantity="few">%d новых контактов добавлено.</item>
+    <item quantity="few">%d новых контакта добавлено.</item>
     <item quantity="many">%d новых контактов добавлено.</item>
     <item quantity="other">%d новых контактов добавлено.</item>
   </plurals>
@@ -234,7 +234,7 @@
   <string name="no_posts">Нет постов</string>
   <plurals name="posts">
     <item quantity="one">%d пост</item>
-    <item quantity="few">%d постов</item>
+    <item quantity="few">%d поста</item>
     <item quantity="many">%d постов</item>
     <item quantity="other">%d постов</item>
   </plurals>
@@ -341,12 +341,12 @@
   <string name="password_changed">Пароль был изменен.</string>
   <string name="panic_setting">Настройка тревожной кнопки</string>
   <string name="panic_setting_title">Тревожная кнопка</string>
-  <string name="panic_setting_hint">Настройте поведение Briar, когда вы используете тревожную кнопку</string>
-  <string name="panic_app_setting_title">Выбор тревожной кнопки</string>
+  <string name="panic_setting_hint">Настройте поведение Briar при использовании тревожной кнопки</string>
+  <string name="panic_app_setting_title">Приложение тревожной кнопки</string>
   <string name="unknown_app">неизвестное приложение</string>
   <string name="panic_app_setting_summary">Приложение не установлено</string>
   <string name="panic_app_setting_none">Нет</string>
-  <string name="dialog_title_connect_panic_app">Подтвердить тревожную кнопку</string>
+  <string name="dialog_title_connect_panic_app">Подтвердить приложение тревожной кнопки</string>
   <string name="dialog_message_connect_panic_app">Вы уверены, что хотите разрешить %1$s запускать действия тревожной кнопки?</string>
   <string name="lock_setting_title">Выйти</string>
   <string name="lock_setting_summary">Выйти из Briar, если нажата тревожная кнопка</string>
@@ -362,11 +362,11 @@
   <string name="notify_group_messages_setting_title">Групповые сообщения</string>
   <string name="notify_group_messages_setting_summary">Показывать оповещения для групповых сообщений</string>
   <string name="notify_group_messages_setting_summary_26">Настройка оповещений для групповых сообщений</string>
-  <string name="notify_forum_posts_setting_title">Записи форума</string>
-  <string name="notify_forum_posts_setting_summary">Показывать оповещения для записей форума</string>
-  <string name="notify_forum_posts_setting_summary_26">Настройка оповещений для записей форума</string>
-  <string name="notify_blog_posts_setting_title">Записи блога</string>
-  <string name="notify_blog_posts_setting_summary">Показывать оповещения для записей блога</string>
+  <string name="notify_forum_posts_setting_title">Посты форума</string>
+  <string name="notify_forum_posts_setting_summary">Показывать оповещения для постов форума</string>
+  <string name="notify_forum_posts_setting_summary_26">Настройка оповещений для постов форума</string>
+  <string name="notify_blog_posts_setting_title">Посты блога</string>
+  <string name="notify_blog_posts_setting_summary">Показывать оповещения для постов блога</string>
   <string name="notify_blog_posts_setting_summary_26">Настройка оповещений для постов блога</string>
   <string name="notify_vibration_setting">Вибрация</string>
   <string name="notify_lock_screen_setting_title">Экран блокировки</string>
