--- a/briar-android/src/main/res/values-oc/strings.xml
+++ b/briar-android/src/main/res/values-oc/strings.xml
@@ -1,6 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <!--Setup-->
+  <string name="setup_title">La benvenguda a Briar</string>
+  <string name="setup_next">Seguent</string>
+  <string name="setup_password_intro">Causissètz un senhal</string>
   <string name="choose_nickname">Causir un escais-nom</string>
   <string name="choose_password">Causir un senhal</string>
   <string name="confirm_password">Confirmar lo senhal</string>
@@ -8,6 +11,9 @@
   <string name="password_too_weak">Lo senhal es tròp feble</string>
   <string name="passwords_do_not_match">Los senhals correspondon pas</string>
   <string name="create_account_button">Crear un compte</string>
+  <string name="more_info">Mai d’informacions</string>
+  <string name="don_t_ask_again">Demandar pas mai</string>
+  <string name="setup_huawei_button">Projècte Briar</string>
   <!--Login-->
   <string name="enter_password">Picatz vòstre senhal :</string>
   <string name="try_again">Senhal incorècte, tornatz ensajar</string>
@@ -18,9 +24,14 @@
 Volètz suprimir vòstre compte e ne crear un nòu ?\n
 \nMèfi : vòstra identitat, vòstres contactes e messatges seràn perduts per totjorn.</string>
   <string name="startup_failed_notification_title">Briar a pas pogut aviar</string>
+  <string name="startup_failed_notification_text">Tocatz per mai d’informacions.</string>
   <string name="startup_failed_activity_title">Fracàs de l’aviada de Briar.</string>
   <string name="startup_failed_service_error">Briar a pas pogut aviar un modul necessari. Tornar installar Briar pòt resolver aquò. Que aquò siá dich : perdretz vòstre compte e totas las donadas ligadas a aqueste. Briar utiliza pas de servidor centralizat per salvar sas donadas.</string>
   <string name="expiry_date_reached">Vòstre logicial s’acabèt.\nMercés d’aver ensajat !</string>
+  <string name="create_new_account">Vos caldrà crear un nòu compte, mas podètz emplegar lo meteis escais-nom.</string>
+  <string name="download_briar_button">Telecargar Briar 1.0</string>
+  <string name="startup_open_database">Deschirament de la basa de donadas…</string>
+  <string name="startup_migrate_database">Mesa a nivèl de la basa de donadas…</string>
   <!--Navigation Drawer-->
   <string name="nav_drawer_open_description">Dobrir lo panèl de navigacion</string>
   <string name="nav_drawer_close_description">Tampar lo panèl de navigacion</string>
@@ -76,6 +87,7 @@ Volètz suprimir vòstre compte e ne crear un nòu ?\n
   <string name="help">Ajuda</string>
   <!--Contacts and Private Conversations-->
   <string name="date_no_private_messages">Cap messatge</string>
+  <string name="no_private_messages">Cap de messatge de mostrar</string>
   <string name="message_hint">Picatz lo messatge</string>
   <string name="delete_contact">Suprimir lo contacte</string>
   <string name="dialog_title_delete_contact">Confirmatz la supression del contacte</string>
@@ -93,6 +105,7 @@ Volètz suprimir vòstre compte e ne crear un nòu ?\n
   <string name="contact_already_exists">Lo contacte %s existís ja</string>
   <string name="contact_exchange_failed">L’escambi de contacte a fracassat</string>
   <string name="qr_code_invalid">Lo QR còdi es invalid</string>
+  <string name="camera_error">Error de camèra</string>
   <string name="connecting_to_device">Connexion a l’aparelh\u2026</string>
   <string name="authenticating_with_device">Autentificacion amb l’aparelh\u2026</string>
   <string name="connection_aborted_remote">Vòstre contacte a copat la connexion ! Poiriá arribar que qualqu’un ensage d’interferir amb aquela</string>
@@ -188,6 +201,7 @@ Volètz suprimir vòstre compte e ne crear un nòu ?\n
   <string name="forum_leave">Quitar lo fòrum</string>
   <string name="dialog_title_leave_forum">Confirmar la sortida del fòrum</string>
   <string name="dialog_button_leave">Quitar</string>
+  <string name="forum_left_toast">Quitar lo forum</string>
   <!--Forum Sharing-->
   <string name="forum_share_button">Partejar lo fòrum</string>
   <string name="contacts_selected">Contactes seleccionats</string>
@@ -326,5 +340,10 @@ Volètz suprimir vòstre compte e ne crear un nòu ?\n
   <!--Screen Filters & Tapjacking-->
   <string name="screen_filter_title">Superposicion detectada</string>
   <!--Permission Requests-->
+  <string name="permission_camera_title">Permission de la camèra</string>
+  <string name="permission_camera_request_body">Per numerizar lo còdi QR cal que Briar aja l’accès a la camèra.</string>
+  <string name="permission_camera_denied_toast">La permission a la camèra es pas estada donada</string>
+  <string name="qr_code">Còdi QR</string>
   <!--Low Memory Notification-->
+  <string name="low_memory_shutdown_notification_title">Desconnectat de Briar</string>
 </resources>
